# VectorAudio

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VERSION  VERSION_API  VERSION_BETA  bundle_linux.sh  bundle_osx.sh  bundle_windows.nsi  collect_licenses.py  imgui.ini  manual_osx_build.sh  vcpkg.json  vector_audio.rc.in
.github/workflows/: build.yml  ci.yml  debug.yml  release.yml
afv-native/: .gitignore  .gitmodules  CMakeLists.txt  COPYING.md  README.md  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.py  conaninfo.txt  graph_info.json
afv-native/.github/disabled-workflows/: build.yml
afv-native/docs/: Licensing.md
afv-native/examples/testclient/: TestClient.h  imgui.ini
afv-native/include/afv-native/: Client.h  Log.h  atcClient.h  atisClient.h  event.h  utility.h
afv-native/include/afv-native/afv/: APISession.h  ATCInputMixer.h  ATCRadioStack.h  EffectResources.h  RadioSimulation.h  RemoteVoiceSource.h  RollingAverage.h  VoiceCompressionSink.h  VoiceSession.h  params.h
afv-native/include/afv-native/afv/dto/: AuthRequest.h  CrossCoupleGroup.h  PostCallsignResponse.h  Station.h  StationTransceiver.h  Transceiver.h  VoiceServerConnectionData.h
afv-native/include/afv-native/afv/dto/domain/: RxTransceiver.h  TxTransceiver.h
afv-native/include/afv-native/afv/dto/interfaces/: IAudio.h  IAudioDirect.h  IAudioVoiceRoom.h
afv-native/include/afv-native/afv/dto/voice_server/: AudioOnDirect.h  AudioRxOnTransceivers.h  AudioTxOnTransceivers.h  Heartbeat.h
afv-native/include/afv-native/audio/: AudioDevice.h  BiQuadFilter.h  FilterSource.h  IFilter.h  ISampleSink.h  ISampleSource.h  ISampleStorage.h  ITick.h  OutputMixer.h  PinkNoiseGenerator.h  RecordedSampleSource.h  SimpleCompressorEffect.h  SineToneSource.h  SinkFrameSizeAdjuster.h  SourceFrameSizeAdjuster.h  SourceStatus.h  SourceToSinkAdapter.h  SpeexPreprocessor.h  VHFFilterSource.h  WavFile.h  WavSampleStorage.h  WhiteNoiseGenerator.h  audio_params.h
afv-native/include/afv-native/cryptodto/: Channel.h  SequenceTest.h  UDPChannel.h  params.h
afv-native/include/afv-native/cryptodto/dto/: ChannelConfig.h  Header.h  ICryptoDTO.h
afv-native/include/afv-native/event/: EventCallbackTimer.h  EventTimer.h
afv-native/include/afv-native/http/: EventTransferManager.h  RESTRequest.h  Request.h  TransferManager.h  http.h
afv-native/include/afv-native/util/: ChainedCallback.h  base64.h  monotime.h
afv-native/src/: NativeWrapper.cpp
afv-native/src/afv/: APISession.cpp  ATCInputMixer.cpp  ATCRadioStack.cpp  EffectResources.cpp  RadioSimulation.cpp  RemoteVoiceSource.cpp  VoiceCompressionSink.cpp  VoiceSession.cpp
afv-native/src/afv/dto/: AuthRequest.cpp  CrossCoupleGroup.cpp  PostCallsignResponse.cpp  Station.cpp  StationTransceiver.cpp  Transceiver.cpp  VoiceServerConnectionData.cpp
afv-native/src/audio/: AudioDevice.cpp  BiQuadFilter.cpp  FilterSource.cpp  OutputMixer.cpp  PortAudioAudioDevice.cpp  PortAudioAudioDevice.h  RecordedSampleSource.cpp  SimpleCompressorEffect.cpp  SineToneSource.cpp  SinkFrameSizeAdjuster.cpp  SoundIOAudioDevice.cpp  SoundIOAudioDevice.h  SourceFrameSizeAdjuster.cpp  SourceToSinkAdapter.cpp  SpeexPreprocessor.cpp  VHFFilterSource.cpp  WavFile.cpp  WavSampleStorage.cpp
afv-native/src/core/: Client.cpp  Log.cpp  atcClient.cpp  atisClient.cpp
afv-native/src/cryptodto/: Channel.cpp  SequenceTest.cpp  UDPChannel.cpp
afv-native/src/cryptodto/dto/: ChannelConfig.cpp  Header.cpp
afv-native/src/event/: EventCallbackTimer.cpp  EventTimer.cpp
afv-native/src/http/: EventTransferManager.cpp  RESTRequest.cpp  Request.cpp  TransferManager.cpp
afv-native/src/util/: base64.cpp  monotime.cpp
include/: application.h  config.h  data_file_handler.h  keyboardUtil.h  osx_resources.h  radioSimulation.h  sdk.h  shared.h  single_instance.h  style.h  updater.h  util.h
include/modals/: settings.h
include/native/: win32_key_util.h  window_manager.h
include/ns/: airport.h  station.h
include/sdk/: sdk.h  sdkWebsocketMessage.h
include/ui/: style.h
include/ui/modals/: settings.h
include/ui/widgets/: addstation.widget.h  gain.widget.h  lastrx.widget.h  networkstatus.widget.h
lib/include/: afv_native_export.h
lib/include/afv-native/: afv_native_export.h  atcClientWrapper.h  event.h  hardwareType.h
lib/windows/: afv_native.lib  afv_natived.lib
resources/: Info.plist  LICENSE.txt  LICENSE_AUDIO_ALERT  VectorAudio.icns  imgui.ini  make_icns.sh
resources/VectorAudio.AppDir/: AppRun  vectoraudio.desktop
src/: application.cpp  application.h  config.cpp  config.h  data_file_handler.cpp  main.cpp  main_old.cpp  osx_resources.mm  sdk.cpp  single_instance.cpp  style.h  updater.cpp  window_manager.cpp  window_manager.mm
src/modals/: settings.cpp
src/native/: osx_resources.mm  single_instance.cpp  win32_key_util.cpp  window_manager.cpp  window_manager.mm
src/sdk/: sdk.cpp
src/ui/modals/: settings.cpp
